[package]
name = "booking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = "0.4"
#pretty_env_logger = "0.4"

#dotenv = "0.15"

chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" , "chrono" ] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#uuid = "1.1"

thiserror = "1.0.31"

#axum = "0.5.11"

#tracing = "0.1.35"
#tracing-subscriber = "0.3.14"

[profile.dev.package.sqlx-macros]
opt-level = 3
